One more overflow fix

--- a/less/article.less
+++ b/less/article.less
@@ -14,20 +14,13 @@
 
 .mosaico-article {
   grid-area: article;
-  display: grid;
-  grid-template-areas:
-    "breaking"
-    "head"
-    "image"
-    "body";
+  display: block;
 
   margin-left: 12px;
   margin-right: 12px;
 
-  @media (max-width: 350px) {
-    display: block;
-  }
   @media (min-width: @breakpoint-2col) {
+    display: grid;
     grid-template-areas:
       "breaking"
       "head"
